style.css
/* ... */
.blog .content-area .entry-title a, .archive .content-area .entry-title a, .search .content-area .entry-title a {
  color: #363738; }

.comment-respond p {
  margin-bottom: .5em; }

dfn, cite, em, i {
  font-style: italic; }

@media (min-width: 48em) {
  blockquote {
    font-size: 1.5rem;
    line-height: 1.5;
    border-left: 0; } }
address {
  margin: 0 0 1.5em; }

pre {
  background: #eee;
  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
  font-size: 15px;
  font-size: 0.9375rem;
  line-height: 1.6;
  margin-bottom: 1.6em;
  max-width: 100%;
  overflow: auto;
  padding: 1.6em; }

code, kbd, tt, var {
  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
  font-size: 15px;
  font-size: 0.9375rem; }

abbr, acronym {
  border-bottom: 1px dotted #666;
  cursor: help; }

mark, ins {
  background: #fff9c0;
  text-decoration: none; }

big {
  font-size: 125%; }

/*--------------------------------------------------------------
# Elements
--------------------------------------------------------------*/
html {
  box-sizing: border-box; }

*,
*:before,
*:after {
  /* Inherit box-sizing to make it easier to change the property for components that leverage other behavior; see http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
  box-sizing: inherit; }

body {
  background: #fff;
  /* Fallback for when there is no custom background color defined. */ }

blockquote, q {
  quotes: "" "";
  margin-bottom: 0;
  border-left: 0;
  font-size: 1.25rem;
  font-weight: 700;
  font-style: italic;
  line-height: 1.375; }
  blockquote cite, q cite {
    font-weight: 300; }
  blockquote:before, blockquote:after, q:before, q:after {
    content: ""; }

hr {
  background-color: #ccc;
  border: 0;
  height: 1px;
  margin-bottom: 1.5em; }

ul {
  list-style: disc; }

ol {
  list-style: decimal; }

li > ul,
li > ol {
  margin-bottom: 0; }

dt {
  font-weight: bold; }

dd {
  margin: 0 1.5em 1.5em; }

img, figure {
  height: auto;
  /* Make sure images are scaled correctly. */
  max-width: 100%;
  /* Adhere to container width. */ }

.masonry img {
  width: 100%; }

.single blockquote cite, .single q cite, .page blockquote cite, .page q cite {
  display: block;
  font-size: 1rem;
  text-align: right;
  margin-bottom: 1em;
  margin-top: 1em; }
.single blockquote cite:before, .single q cite:before, .page blockquote cite:before, .page q cite:before {
  content: "- "; }
.single blockquote cite:after, .single q cite:after, .page blockquote cite:after, .page q cite:after {
  content: " -"; }

@media (min-width: 48em) {
  .post blockquote, .post q, .post .entry-content img.alignleft, .post .entry-content img.alignnone, .post .entry-content figure.alignleft, .post .entry-content figure.alignnone {
    margin-left: -21.666%; }

  .post .entry-content img.alignnone, .post .entry-content figure.alignnone {
    min-width: 121.666%; }

  .single blockquote, .single q, .page blockquote, .page q {
    padding-left: 0; } }
table {
  margin-bottom: 1em; }

:focus {
  outline: transparent; }

button > svg,
a > button > svg,
span > svg {
  width: 24px;
  height: 24px;
  fill: #363636; }
  button > svg:hover,
  a > button > svg:hover,
  span > svg:hover {
    fill: #b55f3a; }

/*--------------------------------------------------------------
# Forms
--------------------------------------------------------------*/
button,
input[type="button"],
input[type="reset"],
input[type="submit"],
#loose-load-more .btn {
  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: .875rem;
  font-weight: 300;
  text-transform: uppercase;
  transition: .5s;
  background-color: transparent;
  padding: .5em 1em;
  border: 1px solid #363636; }
  button:hover,
  input[type="button"]:hover,
  input[type="reset"]:hover,
  input[type="submit"]:hover,
  #loose-load-more .btn:hover {
    background-color: #363636;
    color: #fff; }

#loose-load-more {
  padding: 2em 0;
  margin-bottom: 0; }

#loose-load-more .btn {
  width: 100%; }

input[type="text"],
input[type="email"],
input[type="url"],
input[type="password"],
input[type="search"],
textarea {
  padding: 0.3125rem;
  color: #666;
  border: 1px solid #ddd; }
  input[type="text"]:focus,
  input[type="email"]:focus,
  input[type="url"]:focus,
  input[type="password"]:focus,
  input[type="search"]:focus,
  textarea:focus {
    color: #111; }

input, textarea {
  background-color: transparent; }

textarea {
  width: 100%;
  height: 5rem; }

/*--------------------------------------------------------------
# Navigation
--------------------------------------------------------------*/
/*--------------------------------------------------------------
## Links
--------------------------------------------------------------*/
a:hover, a:focus, a:active {
  color: #b55f3a; }
a:focus {
  outline: none; }
a:hover, a:active {
  outline: none; }

h1 a, .site-title a, h2 a, h3 a, h4 a, h5 a, h6 a, .entry-meta .byline a,
.entry-meta .posted-on a,
.entry-meta .loose-post-format a, .navigation a, .main-navigation a {
  border-bottom: none; }

.edit-link {
  margin-left: 2em;
  font-weight: 700; }

/*--------------------------------------------------------------
## Menus
--------------------------------------------------------------*/
.navbar-navigation {
  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
  position: relative;
  clear: both;
  display: block;
  float: left;
  width: 100%;
  border-bottom: 1px solid #ddd;
  background-color: #fff;
  text-transform: uppercase;
  letter-spacing: .15em;
  box-shadow: 0 1px 4px #ddd; }
  .navbar-navigation ul {
    display: none;
    list-style: none;
    margin: 0;
    padding-left: 0;
    text-align: center;
    background-color: #fff; }
    .navbar-navigation ul .menu-item-has-children,
    .navbar-navigation ul .page-item-has-children {
      position: relative; }
/* ... */

